Fix collapsed menu on android devices

--- a/inc/assets/less/tc_custom_responsive.less
+++ b/inc/assets/less/tc_custom_responsive.less
@@ -158,7 +158,14 @@
     border-radius: 4px;
     .box-shadow(~"0 2px 10px rgba(0, 0, 0, 0.25)");
   }
-  
+
+  .nav-collapse.collapse .nav{
+    display: none;
+  }
+  .nav-collapse, .nav-collapse.collapse.in .nav{
+    display: block;
+  }
+
   .nav-collapse .nav > li > a, .nav-collapse .dropdown-menu a {
     font-weight:normal;
     -webkit-border-radius: 0px;
